--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -52,6 +52,17 @@
      with_items:
        - /var/lib/mysql/ib_logfile0
        - /var/lib/mysql/ib_logfile1
+
+   - name: Update Mariadb setting
+     lineinfile:
+       dest: /etc/my.cnf
+       insertafter: '\[mysqld\]'
+       line: "{{ item }}"
+       state: present
+     with_items:
+       - innodb_buffer_pool_size=1024M
+       - innodb_log_file_size=64M
+       - innodb_lock_wait_timeout=900
  
    - name: initialize slurmdb databases
      mysql_db:
