--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -64,6 +64,12 @@
        - innodb_log_file_size=64M
        - innodb_lock_wait_timeout=900
  
+   - name: restart mariadb
+     service:
+       name: mariadb
+       state: restarted
+       enabled: yes
+
    - name: initialize slurmdb databases
      mysql_db:
        name: "{{ slurm_acct_db }}"
