--- a/roles/ohpc_matlab/tasks/main.yaml
+++ b/roles/ohpc_matlab/tasks/main.yaml
@@ -18,7 +18,7 @@
     state: directory
     mode: 0755
 
-- name: Copy modulefile from template to /export/eb/ 
+- name: Copy modulefile from template to /export/eb/modules/all/matlab/ 
   template:
     src: r2018a
     dest: /export/eb/modules/all/matlab/r2018a
